# blue_core

./: .gitignore  LICENSE  README.md
blue_bringup/: CMakeLists.txt  package.xml
blue_bringup/config/: README.md  blue.rviz  controllers.xml  controllers.yaml  gazebo_controllers.xml  left_robot_parameters.yaml  robot_parameters_left.yaml  robot_parameters_right.yaml  robot_parameters_right.yaml.arm_backup  robot_parameters_right.yaml.backup  robot_parameters_right.yaml.table_backup  robot_parameters_stand.yaml
blue_bringup/launch/: _run.launch  _single_arm.launch  _single_arm_control.launch  accel_test.launch  blue.launch  full.launch  full_v1.launch  full_v2.launch  full_vis.launch  left.launch  left_arm.launch  left_v1.launch  left_v2.launch  right.launch  right_accel_test.launch  right_arm.launch  right_v1.launch  right_v2.launch  run_full.launch  run_left.launch  run_right.launch  rviz.launch  stand.launch  two_arms.launch
blue_bringup/scripts/: accel_calibration.py  calibrate_joint_offsets.py  calibrate_joint_offsets_new.py  gripper_calibration_service.py  ik_service.py  inverse_kinematics_service.py  simple_startup_calibration.py
blue_bringup/src/: hardstop_calibrate.cpp
blue_controller_manager/: CMakeLists.txt  package.xml
blue_controller_manager/scripts/: spawner.py
blue_controller_manager/src/: MotorState.cpp  blue_controller_manager.cpp  blue_hardware_interface.cpp
blue_controllers/: CMakeLists.txt  blue_controller_plugins.xml  package.xml
blue_controllers/config/: README.md  controllers.yaml  gazebo_controllers.yaml  gazebo_mimic_joint_pid.yaml
blue_controllers/src/: BlueJointGroupCTC.cpp  BlueJointGroupPositionController.cpp  CartesianPoseController.cpp
blue_core/: CMakeLists.txt  package.xml
blue_descriptions/: CMakeLists.txt  package.xml  prep_urdf.sh  urdf.rviz
blue_descriptions/launch/: display.launch  full_robot_display.launch  gazebo.launch  right_arm.launch  right_arm_display.launch  test.launch
blue_descriptions/meshes/: arm_base_link_v2.STL  lift_link_v2.STL  roll_link_v2.STL  wrist_roll_link_open.STL
blue_descriptions/robots/: blue_description_sevendof_dyn.urdf  blue_full.urdf.xacro  blue_full_v1.urdf.xacro  blue_full_v2.urdf.xacro  blue_left.urdf.xacro  blue_left_arm.urdf.xacro  blue_left_v1.urdf.xacro  blue_left_v2.urdf.xacro  blue_right.urdf.xacro  blue_right_arm.urdf.xacro  blue_right_no_gripper.urdf.xacro  blue_right_v1.urdf.xacro  blue_right_v2.urdf.xacro  blue_stand.urdf.xacro  right_arm.urdf  temp.urdf  temp.xml
blue_descriptions/worlds/: empty_world_nograv.world
blue_hardware_drivers/: CMakeLists.txt  package.xml  setup.py
blue_hardware_drivers/cmake/: UseCython.cmake
blue_hardware_drivers/json_src/: json.cpp
blue_hardware_drivers/launch/: left_motor_drivers.launch  motor_drivers.launch  right_motor_drivers.launch
blue_hardware_drivers/scripts/: accel_gravity_publisher.py  bldc_driver.py  bldc_driver_frequency_test.py  comms.py  setup_udev_rules.sh
blue_hardware_drivers/src/: BLDCCalibrate.cpp  BLDCControllerClient.cpp  BLDCControllerTest.cpp  BLDCDriver.cpp  BLDCDriver_Position_Drive.cpp  BLDCDriver_communication_freq_test.cpp  BLDCDriver_node.cpp  Buffer.cpp  Packets.cpp  crc16.cpp
blue_hardware_interface/: CMakeLists.txt  package.xml
blue_hardware_interface/src/: blue_dynamics.cpp  blue_hardware_interface.cpp  blue_kinematics.cpp  blue_transmissions.cpp
blue_msgs/: CMakeLists.txt  package.xml
blue_msgs/msg/: GravityVectArr.msg  GravityVectorArray.msg  MotorState.msg
blue_msgs/srv/: GripperPositionCalibration.srv  InverseKinematics.srv  JointStartupCalibration.srv
koko/: CMakeLists.txt  package.xml
koko_bringup/: CMakeLists.txt  package.xml
koko_bringup/config/: .control_5dof.yaml.swp  control_3dof.yaml  control_5dof.yaml  control_7dof.yaml  control_7dof_pose.yaml  control_gripper.yaml  control_parameters.yaml  controllers.xml  controllers.yaml  left_control_parameters.yaml  left_robot_parameters.yaml  right_robot_parameters.yaml  robot_parameters.yaml
koko_bringup/launch/: .fivedof_control.launch.swp  _single_arm.launch  ball_sevendof_control.launch  controller_test.launch  demo_fivedof_control.launch  fivedof_control.launch  gripper_control.launch  hardstop_sevendof.launch  joint_control.launch  left_arm.launch  left_arm_development.launch  left_cartesian_control.launch  left_cartesian_sevendof.launch  left_joint_control.launch  motor_volt_curr_2018-02-06-15-50-54.bag  record_joints.launch  right_arm.launch  right_arm_development.launch  sevendof_control.launch  sevendof_control_debug_kinematics.launch  sevendof_control_joints_gui.launch  sevendof_kinematics_joint_limit.launch  threedof_control.launch  two_arms.launch
koko_bringup/src/: hardstop_calibrate.cpp
koko_control/: CMakeLists.txt  package.xml  tracker_example.bag
koko_control/scripts/: accel_gravity_publisher.py  koko_gripper.py  record_accel.py
koko_control/src/: .koko_controller_manager.cpp.swp  koko_controller_manager.cpp  koko_controller_manager_independent.cpp  koko_hardware_interface.cpp
koko_controller_manager/: CMakeLists.txt  package.xml
koko_controller_manager/scripts/: accel_gravity_publisher.py  spawner.py
koko_controller_manager/src/: '  koko_controller_manager.cpp  koko_hardware_interface.cpp
koko_controllers/: CMakeLists.txt  koko_controller_plugins.xml  package.xml
koko_controllers/src/: .CartesianPoseController.cpp.swo  .InverseDynamicsController.cpp.swp  CartesianPoseController.cpp  CartesianPoseController.cpp.orig.old  GripperController.cpp  InverseDynamicsController.cpp  InverseDynamicsController.h  KokoGroupPositionController.cpp  KokoJointGroupPositionController.cpp
koko_descriptions/: CMakeLists.txt  package.xml  prep_urdf.sh  urdf.rviz
koko_descriptions/koko_description_base/: CMakeLists.txt
koko_descriptions/koko_description_fivedof_dyn/: CMakeLists.txt  package.xml  urdf.rviz
koko_descriptions/koko_description_link/: CMakeLists.txt  (+2 more)
koko_hardware_drivers/: CMakeLists.txt  package.xml
koko_kinematics/: CMakeLists.txt  package.xml
simple_hand_final/: CMakeLists.txt  package.xml
(+273 files in other folders)
