<package format="2">
  <name>blue_bringup</name>
  <version>0.0.0</version>
  <description>Bringup scripts and launch files for Blue</description>

  <maintainer email="phil80301@berkeley.edu">Philipp Wu</maintainer>

  <license>MIT</license>

  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="phil80301@berkeley.edu">Philipp Wu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>blue_controller_manager</run_depend>
  <run_depend>blue_msgs</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>tf2_web_republisher</run_depend>
  <run_depend>effort_controllers</run_depend>
</package>
