<package format="3">
  <name>blue_bringup</name>
  <version>0.0.0</version>
  <description>Bringup scripts and launch files for Blue</description>

  <maintainer email="phil80301@berkeley.edu">Philipp Wu</maintainer>

  <license>MIT</license>

  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="phil80301@berkeley.edu">Philipp Wu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>blue_controller_manager</exec_depend>
  <exec_depend>blue_msgs</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>tf2_web_republisher</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>trac_ik_python</exec_depend>
</package>
