<package format="2">
  <name>blue_controller_manager</name>
  <version>0.0.0</version>
  <description>
    The blue_controller_manager package provides a controller manager and its supporting hardware
    interface for running a Blue robot using the ros_control software framework.
  </description>

  <maintainer email="brentyi@berkeley.edu">Brent Yi</maintainer>

  <license>MIT</license>

  <author email="phil80301@berkeley.edu">Philipp Wu</author>
  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="zoemccarthy12@gmail.com">Zoe McCarthy</author>
  <author email="lxd20@berkeley.edu">Lear Du</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>controller_manager</depend>
  <depend>blue_hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>control_toolbox</depend>
  <depend>control_msgs</depend>
  <depend>blue_msgs</depend>

</package>
