<package format="3">
  <name>blue_controllers</name>
  <version>0.0.0</version>
  <description>Source code for our custom controller plugins</description>

  <maintainer email="brentyi@berkeley.edu">Brent Yi</maintainer>

  <license>MIT</license>

  <author email="phil80301@berkeley.edu">Philipp Wu</author>
  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="zoemccarthy12@gmail.com">Zoe McCarthy</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>controller_interface</depend>
  <depend>urdf</depend>
  <depend>control_toolbox</depend>
  <depend>hardware_interface</depend>
  <depend>control_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>position_controllers</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_controller</depend>
  <depend>gripper_action_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>kdl_parser</depend>
  <depend condition="$ROS_DISTRO != noetic">orocos_kdl</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <controller_interface plugin="${prefix}/blue_controller_plugins.xml"/>
  </export>
</package>
