<package format="3">
  <name>blue_descriptions</name>
  <version>1.0.0</version>
  <description>URDF files, 3D models, and other physical descriptors</description>

  <maintainer email="phil80301@berkeley.edu">Philipp Wu</maintainer>

  <license>MIT</license>

  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="phil80301@berkeley.edu">Philipp Wu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <export>
    <architecture_independent />
  </export>
</package>
