<?xml version="1.0"?>
<package>
  <name>blue_hardware_drivers</name>
  <version>0.0.0</version>
  <description>The blue_hardware_drivers package</description>

  <maintainer email="zhaoallan@berkeley.edu">Allan Zhao</maintainer>
  <maintainer email="brentyi@berkeley.edu">Brent Yi</maintainer>

  <license>BSD</license>

  <author email="zhaoallan@berkeley.edu">Allan Zhao</author>
  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="lxd20@berkeley.edu">Lear Du</author>
  <author email="phil80301@berkeley.edu">Philipp Wu</author>
  <author email="zoemccarthy12@gmail.com">Zoe McCarthy</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>transmission_interface</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>transmission_interface</run_depend>

</package>
