<package format="2">
  <name>blue_hardware_drivers</name>
  <version>0.0.0</version>
  <description>The blue_hardware_drivers package</description>

  <maintainer email="brentyi@berkeley.edu">Brent Yi</maintainer>

  <license>MIT</license>

  <author email="zhaoallan@berkeley.edu">Allan Zhao</author>
  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="gbalke@berkeley.edu">Greg Balke</author>
  <author email="phil80301@berkeley.edu">Philipp Wu</author>
  <author email="zoemccarthy12@gmail.com">Zoe McCarthy</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>serial</depend>
  <depend>std_msgs</depend>
  <depend>blue_msgs</depend>
  <depend>transmission_interface</depend>

</package>
