<package format="3">
  <name>blue_hardware_interface</name>
  <version>0.0.0</version>
  <description>
    The blue_hardware_interface package provides the hardware interface for
    running a Blue robot using the ros_control software framework.
  </description>

  <maintainer email="brentyi@berkeley.edu">Brent Yi</maintainer>

  <license>MIT</license>

  <author email="phil80301@berkeley.edu">Philipp Wu</author>
  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="zoemccarthy12@gmail.com">Zoe McCarthy</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>blue_hardware_drivers</depend>
  <depend>joint_limits_interface</depend>
  <depend>kdl_parser</depend>
  <depend condition="$ROS_DISTRO != noetic">orocos_kdl</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>blue_msgs</depend>
</package>
