<?xml version="1.0"?>
<package>
  <name>koko</name>
  <version>0.0.0</version>
  <description>The koko meta package contains all the basic software for running and using a Koko</description>

  <maintainer email="phil80301@berkeley.edu">Philipp Wu</maintainer>

  <license>BSD</license>

  <author email="zhaoallan@berkeley.edu">Allan Zhao</author>
  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="lxd20@berkeley.edu">Lear Du</author>
  <author email="phil80301@berkeley.edu">Philipp Wu</author>
  <author email="zoemccarthy12@gmail.com">Zoe McCarthy</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
