<?xml version="1.0"?>
<package>
  <name>koko_controller_manager</name>
  <version>0.0.0</version>
  <description>
    The koko_controller_manager package provides a controller manager and its supporting hardware
    interface for running a Koko robot using the ros_control software framework.
  </description>

  <maintainer email="brentyi@berkeley.edu">Brent Yi</maintainer>

  <author email="phil80301@berkeley.edu">Philipp Wu</author>
  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="zoemccarthy12@gmail.com">Zoe McCarthy</author>
  <author email="lxd20@berkeley.edu">Lear Du</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>koko_hardware_drivers</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>koko_hardware_drivers</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>

</package>
